package com.github.studeasy.dao.feedbackDAO;

/**
 * Abstract class for the Feedback DAO
 * Contains the methods needed by the Feedback DAO
 */
public abstract class FeedbackDAO {
}
