package com.github.studeasy.dao.feedbackDAO;

/**
 * The Feedback DAO using a MySQL database
 * Contains all the methods accessing feedback related data
 */
public class MySQLFeedbackDAO extends FeedbackDAO{
}
